# fdk-mqa-url-checker

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  healthy
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-url-checker.yaml  kustomization.yaml  service-fdk-mqa-url-checker.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
kafka/: create_schemas.sh  create_topics.sh
kafka/schemas/: no.fdk.mqa.DatasetEvent.json  no.fdk.mqa.MQAEvent.json
src/: error.rs  kafka.rs  lib.rs  main.rs  metrics.rs  rdf.rs  schemas.rs  url.rs  utils.rs  vocab.rs
tests/: integration_test.rs  kafka_utils.rs
tests/data/: dataset_event.ttl  mqa_event.ttl
