[package]
name = "fdk-mqa-url-checker"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Reiffers <jeff@ouvir.no>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
apache-avro = "0.16.0"
cached = "0.46.1"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3"
http = "0.2.10"
lazy_static = "1.4.0"
log = "0.4"
oxigraph = "0.3.20"
prometheus = "0.13.3"
rand = "0.8.5"
rdkafka = { version = "0.36", features = ["cmake-build"] }
schema_registry_converter = { version = "4.0.0", features = ["avro", "blocking"] }
reqwest = { version = "0.10.10", features = ["blocking"] }
serde = "1.0.192"
serde_derive = "1.0.192"
thiserror = "1.0.50"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.17", features = ["json", "env-filter", "tracing-log"] }
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
