[package]
name = "fdk-mqa-url-checker"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Reiffers <jeff@ouvir.no>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
apache-avro = "0.21.0"
cached = { version = "0.59.0", features = ["async"] }
futures = "0.3.32"
http = "1.4.0"
lazy_static = "1.5.0"
oxigraph = "0.5.8"
prometheus = "0.14.0"
rdkafka = "0.39.0"
schema_registry_converter = { version = "4.8.0", features = ["avro", "blocking"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["json", "env-filter", "tracing-log"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
sophia_api= "0.9.0"
sophia_isomorphism = "0.9.0"
sophia_turtle = "0.9.0"
